[gd_scene load_steps=4 format=2]

[ext_resource path="res://Art/GUI/Signs/Pause/Continue.png" type="Texture" id=1]
[ext_resource path="res://menus/Button.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 76, 24 )

[node name="Button" type="RigidBody2D"]
use_parent_material = true
position = Vector2( 0, -244 )
z_index = 15
z_as_relative = false
collision_layer = 128
collision_mask = 128
script = ExtResource( 2 )
button = NodePath("Sprite/Button")
sprite = NodePath("Sprite")

[node name="Sprite" type="Sprite" parent="."]
use_parent_material = true
texture = ExtResource( 1 )

[node name="Button" type="TextureButton" parent="Sprite"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -77.5
margin_top = -26.5
margin_right = -77.5
margin_bottom = -26.5
focus_neighbour_bottom = NodePath("../../../Exit/Sprite/ExitPaused")
action_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="focus_entered" from="Sprite/Button" to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="Sprite/Button" to="." method="_on_focus_exited"]
[connection signal="pressed" from="Sprite/Button" to="." method="_on_Button_pressed"]
